--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-		<h1>Input BrainFuck Code Below:</h1>
+		<h1>Input BrainFuck Below:</h1>
 		<form id="input">
-			<input id="code">
-			</input>
-		</form>
+      <textarea id="main" rows="5" cols="60"></textarea>
+      <br/>
+			<br/>
+      <input id="submit" type="submit">
+    </form>
+		<p id="output"></p>
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
