--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 		<form id="input">
       <textarea id="main" rows="5" cols="60"></textarea>
       <br/>
+			<!-- <input id="comma-input"></input>
+			<input id="comma-submit" type="submit">
+      <br/>
+			<p>Input below</p> -->
 			<br/>
       <input id="submit" type="submit">
     </form>
