--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width">
     <title>BrainFuck Interpreter</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+		<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
+          integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
+    
   </head>
   <body>
 		<h1>Input BrainFuck Below:</h1>
@@ -18,7 +21,10 @@
 			<br/>
       <input id="submit" type="submit">
     </form>
-		<p id="output"></p>
+		<h2>Output:</h2>
+		<h3 id="output"></h3>
+		<h2>Final Array:</h2>
+		<h3 id="array"></h3>
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
   </body>
