--- a/index.html
+++ b/index.html
@@ -12,7 +12,29 @@
   <body>
 		<h1>Input BrainFuck Below:</h1>
 		<form id="input">
-      <textarea id="main" rows="5" cols="60"></textarea>
+      <textarea id="main" rows="22" cols="60">
++++++ +++++                      initialize counter (cell #0) to 10
+[                                           use loop to set 70/100/30/10
+    > +++++ ++                     add  7 to cell #1
+    > +++++ +++++               add 10 to cell #2
+    > +++                              add  3 to cell #3
+    > +                                  add  1 to cell #4
+<<<< -                                 decrement counter (cell #0)
+]
+> ++ .                                  print 'H'
+> + .                                    print 'e'
++++++ ++ .                         print 'l'
+.                                          print 'l'
++++ .                                  print 'o'
+> ++ .                                 print ' '
+<< +++++ +++++ +++++ .  print 'W'
+> .                                      print 'o'
++++ .                                  print 'r'
+----- - .                                print 'l'
+----- --- .                              print 'd'
+> + .                                   print '!'
+> .                                      print '\n'
+			</textarea>
       <br/>
 			<!-- <input id="comma-input"></input>
 			<input id="comma-submit" type="submit">
