Added link to repo

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 		<h3 id="output"></h3>
 		<h2>Final Array:</h2>
 		<h3 id="array"></h3>
+		<a href="https://github.com/shiv213/BrainFuckInterpreter">GitHub</a>
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="script.js"></script>
   </body>
